--- a/app/src/main/res/layout/list_of_friends_layout.xml
+++ b/app/src/main/res/layout/list_of_friends_layout.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
         android:id="@+id/profilePic"
@@ -16,18 +17,18 @@
         android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="TextView"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/profilePic"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/profilePic" />
 
     <TextView
         android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        app:layout_constraintTop_toBottomOf="@id/userName"
         app:layout_constraintStart_toEndOf="@id/profilePic"
-        app:layout_constraintTop_toBottomOf="@id/profilePic" />
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
